--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
   "buildCommand": "pnpm build",
-  "installCommand": "pnpm i --no-frozen-lockfile"
+  "installCommand": "pnpm i --no-frozen-lockfile",
+  "outputDirectory": "dist"
 }
