--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^8.2.2",
     "html-minifier": "^4.0.0",
     "postcss": "^8.4.32",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.3.6",
     "uglify-js": "^3.17.4"
   }
